# bevy_locomotion

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: gymnasium.rs
src/: lib.rs  main.rs
src/camera/: effects.rs  look.rs  mod.rs  plugin.rs  smoothing.rs
src/physics/: ground.rs  layers.rs  mod.rs  plugin.rs
src/player/: audio.rs  crouch.rs  forceslide.rs  input.rs  jump.rs  ladder.rs  ledge.rs  mod.rs  movement.rs  plugin.rs  state.rs  stepup.rs
src/world/: mod.rs  test_level.rs
