[package]
name = "player_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
avian3d = "0.5"
bevy_enhanced_input = "0.23"

[features]
dev = ["bevy/dynamic_linking"]

# Optimize dependencies in dev for faster iteration
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
